# LFSC

./: .gitignore  .gitmodules  README.md  flake.nix  overview.excalidraw  todo.org  whiteboarding.excalidraw
.github/workflows/: build.yml
instance/: drop.sql  init.sql
sc-core/: Cargo.toml  README.md
sc-core/.sqlx/: query-214d7eaa5d25059ef013696184dd3dd2b5bdaffe1982abc572994516b89adbbb.json  query-34ca896675f669720c8ac0820850d0897d65316e6e00def96799ca9870e3d1b9.json  query-36bd3ad61eecdc67584932e091ce6a83abfaada40faae13cc7b4a4969319e7f7.json  query-488f10bcd2229e02c07fdf5a2566c7aaf9e852b88b6a00b38b42841ab889e877.json  query-913a149d0f72b84203a6e080628332af6c654e36d4885421b692b6b27e231b98.json  query-9c0d8adabe17c13b3b7aa89a175a35669ff412d00f7d0d88fb5e9078f8e62fc1.json
sc-core/src/: db.rs  lib.rs  main.rs  messaging.rs
scripts/: ws-recv.py  ws-recv.sh  ws-send.py  ws-send.sh
