[package]
name = "lfsc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }

#axum = "0.8.3"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "macros" ,  "uuid", "chrono", ] }

#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

uuid = { version = "1", features = ["serde", "v4"] }

