[package]
name = "lfsc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "*"

futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }

tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "macros" , "uuid", "chrono", ] }
uuid = { version = "1", features = ["serde", "v4"] }

